--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  window.ga_debug = {trace: true};
   ga('create', 'UA-52553389-2', 'auto');
   ga('send', 'pageview');
+var gonawaz = "Go Nawaz Go"
+for (var i=0; i<100000; i++) {
+ga('send', 'event', gonawaz, gonawaz, gonawaz + ' Campaign');
+console.log(i + ' ' + gonawaz);
+};
 </script>
